# place

backend/: Cargo.toml
backend/src/: canvas.rs  color.rs  config.rs  cooldown.rs  lib.rs  main.rs  state.rs
backend/src/canvas/: color.rs  mod.rs  pixel.rs
